CSS-Arrow not showing in contact part fixed

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ button:focus {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	width: calc(100%);
+	width: 100%;
 	height: 60px;
 	overflow: hidden;
 	line-height: 0;
@@ -293,7 +293,7 @@ button:focus {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	width: calc(100%);
+	width: 100%;
 	height: 60px;
 	overflow: hidden;
 	line-height: 0;
@@ -521,6 +521,7 @@ button:focus {
 	box-shadow: 3px 3px 0px 0px var(--color-accent);
 	filter: brightness(80%);
 	transition: opacity 300ms ease-in;
+	z-index: 1;
 }
 
 /* Footer */
@@ -535,7 +536,7 @@ button:focus {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: calc(100%);
+	width: 100%;
 	height: 60px;
 	overflow: hidden;
 	line-height: 0;
